# ai

./: README.md  pyproject.toml  trust_certificate.md
src/project/: audit_logger.py  crew.py  main.py  models.py
src/project/config/: agents.yaml  tasks.yaml
src/project/tools/: __init__.py  bias_detector.py  pii_scanner.py  safety_checker.py  source_tracer.py  trust_calculator.py
tests/: test_veritas.py
