[project]
name = "project"
version = "0.1.0"
description = "project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.2",
    "fastapi>=0.128.0",
    "litellm>=1.75.3",
]

[project.scripts]
project = "project.main:run"
run_crew = "project.main:run"
train = "project.main:train"
replay = "project.main:replay"
test = "project.main:test"
run_with_trigger = "project.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
